--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,3 +11,16 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+<!-- 
+[[redirects]]
+
+from = "/api/*"
+to = "https://perplexity-bd2d.onrender.com/api/v1/:splat"
+status = 200
+force = true -->
+
+
+
+
