--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="//run-static.pingdom.net/pa-67dd0b19bf37308120805c"></script>
   </body>
 </html>
 
